# symsynd

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Dockerfile  Dockerfile.manylinux  Dockerfile.manylinux.32  Dockerfile.manylinux.64  MANIFEST.in  Makefile  README.md  build-wheels.sh  build.py  demangler_build.py  docker-build.sh  download-release.py  extract-all.py  setup.cfg  setup.py  soaktest.py  symbolizer_build.py
.ci/: upload-release.py
demangle/: .gitignore  demangle-all.cpp  demangle.h
demangle-swift/: demangle-all.cpp  demangle-swift.h
demangle-swift/swift/Basic/: Punycode.h
demangle/llvm/ADT/: StringRef.h
demangle/llvm/Config/: llvm-config.h
demangle/swift/Basic/: Demangle.cpp  Punycode.cpp
libdebug/: Cargo.toml  libdebug.h
libdebug/examples/: test.rs
libdebug/src/: cabi.rs  error.rs  lib.rs  read.rs
libdwarf/: Cargo.toml  libdwarf.h
libdwarf/examples/: test.rs
libdwarf/src/: cabi.rs  error.rs  lib.rs  read.rs
libsymbolizer/: CMakeLists.txt  build.sh  llvm-symbolizer.cpp  llvm-symbolizer.h
symsynd/: __init__.py  _compat.py  _dwarf.py  _symbolizer.py  bulkextract.py  demangle.py  driver.py  exceptions.py  heuristics.py  images.py  libdebug.py  libdwarf.py  libsymbolizer.py  mach.py  report.py  swift.py  symbolizer.py  utils.py
symsynd/macho/: __init__.py  arch.py  header.py  mtypes.py  util.py
tests/: conftest.py  test_crashprobe.py  test_debug.py  test_demangle.py  test_heuristics.py  test_macho.py  test_report.py
tests/res/: crash-report.json  swift-crash-report.json
(+4 files in other folders)
